--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
   </style>
   </head>
   <body>
-    <div id="main">
+	<a href="http://github.com/halfninja/halfninja"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+    <div id="container">
       <div id="wrapper">
         <div id="content" class="site">
 
